
public enum GameMode {Versus, Tour, Boss, Train }
public enum GameDifficult {Easy, Medium, Hard }
public enum Character { Player, Enemy }
public enum CharacterToChoose {
    Goku, GokuSSj, GokuSSj2, GokuSSj3, GokuSSj4,
    MabuForm1, MabuForm2, MabuForm3, MabuForm4, MabuForm5
}
public enum MapToChoose {
    Tournament, Wasteland, KamiHouse, CircleHouse, GodPlanet
}
public enum MovementType {Forward, Backward, Up, Down }
public enum AnimationState {Idle, Movement, BuffMana, Dash, Attack, Punch, Defend, TakeDamage, Die, Transform }

public enum AttackType { Punch, Skill, UltimateSkill, Kameha, Teleport, HeavyPunch, SuperPunch, ComboPunch, Defaut }

public enum TakeDamageType {Type1, Type2, Type3, NormalSkill, HeavySkill }
public enum CharacterState {Ready, Fight }

